--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Mocky Up</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
     <header class="container">
-        <img src="logo.png" alt="">
+        <img class="logo" src="logo.png" alt="">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
@@ -31,7 +32,7 @@
                     </li>
                   </ul>
                 </div>
-              </nav>
+            </nav>
     </header>
     <section id="pictures">
         <div id="picture1" class="container">
@@ -76,20 +77,15 @@
                         <input type="submit" name="message" value="Envoyer"/> 
                     </div>
                 </div>
-            </form>
-
+        </form>
     </section>
     <footer class="container">
         <div class="row">
-        <div class="col-3"><p>Pour votre santé évitez de manger trop gras, trop sucré</p></div>
-        <div class="col-1"><img src="youtube.png" alt=""></div>
-        <div class="col-1"><img src="twitter.png" alt=""></div>
-        <div class="col-1"><img src="fb.png" alt=""></div>
-    </div>
-
-    </footer>
-
-    
-    
+            <div class="col-4"><p>Pour votre santé évitez de manger trop gras, trop sucré</p></div>
+            <div class="col-2"><img src="youtube.png" alt=""></div>
+            <div class="col-2"><img src="twitter.png" alt=""></div>
+            <div class="col-2"><img src="fb.png" alt=""></div>
+        </div>
+    </footer> 
 </body>
 </html>
