--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mocky Up</title>
@@ -15,82 +14,85 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
-    <header class="container">
-        <img class="logo" src="logo.png" alt="">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                  <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Produit
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                    </li>
-                    <li class="nav-item active">
-                      <a class="nav-link" href="#">Mise en situation <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item ative">
-                      <a class="nav-link" href="#">Contact</a>
-                    </li>
-                  </ul>
-                </div>
+    <header class="container-fluid">
+        <div class="container">
+            <img class="logo" src="logo.png" alt="">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Produit
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="#">Something else here</a>
+                                    </div>
+                            </li>
+                            <li class="nav-item active">
+                            <a class="nav-link" href="#">Mise en situation <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item ative">
+                            <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
             </nav>
+        </div>
     </header>
-    <section id="pictures">
-        <div id="picture1" class="container">
-            <img src="picture1.png" alt="">
-
+    <section>
+        <div id="picture1" class="container-fluid">
         </div>
-        <div id="picture2" class="container">
-            <img src="picture2.png" alt="">
+        <div id="picture2" class="container-fluid">
         </div>
-        <div id="picture3" class="container">
-            <img src="picture3.png" alt="">
+        <div id="picture3" class="container-fluid">
         </div>
     </section>
-    <section id="situation"class="container">
-        <h2>
-            MISE EN SITUATION
-        </h2>
-        <p>
-            La délicieuse barre protéinée aux saveurs urprenantes à chaque bouchée !
-        </p>
-
+    <section id="situation" class="container-fluid">
+        <div class="container">
+            <h2>
+                MISE EN SITUATION
+            </h2>
+            <p>
+                La délicieuse barre protéinée aux saveurs urprenantes à chaque bouchée !
+            </p>
+        </div>
     </section>
-    <section id="contact" class="container">
-        <h2>
-            CONTACT
-        </h2>
-        <form method="post" action="#" >
-                <div class="row">
-                    <div class="col-4">
-                        <p>Name</p><input type="text" name="pseudo" />
+    <section id="contact" class="container-fluid">
+        <div class="container"> 
+            <h2>
+                CONTACT
+            </h2>
+            <form method="post" action="#" >
+                    <div class="row">
+                        <div class="col-4">
+                            <p>Name</p><input type="text" name="pseudo" />
+                        </div>
+                        <div class="col-4">
+                            <p>Email</p> <input type="text" name="mail"/>
+                            <br />
+                        </div>
+                    </div>  
+                    <div class="row"> 
+                        <div class="col-6">
+                            <p>Message </p>
+                            <textarea name="lemessage" rows="6" cols="40"></textarea>
+                            <br />
+                            <input type="submit" name="message" value="Envoyer"/> 
+                        </div>
                     </div>
-                    <div class="col-4">
-                        <p>Email</p> <input type="text" name="mail"/>
-                        <br />
-                    </div>
-                </div>  
-                <div class="row"> 
-                    <div class="col-6">
-                        <p>Message </p>
-                        <textarea name="lemessage" rows="6" cols="40"></textarea>
-                        <br />
-                        <input type="submit" name="message" value="Envoyer"/> 
-                    </div>
-                </div>
-        </form>
+            </form>
+        </div>
     </section>
-    <footer class="container">
-        <div class="row">
-            <div class="col-4"><p>Pour votre santé évitez de manger trop gras, trop sucré</p></div>
-            <div class="col-2"><img src="youtube.png" alt=""></div>
-            <div class="col-2"><img src="twitter.png" alt=""></div>
-            <div class="col-2"><img src="fb.png" alt=""></div>
+    <footer class="container-fluid">
+        <div class="container"> 
+            <div class="row">
+                <div class="col-4"><p>Pour votre santé évitez de manger trop gras, trop sucré</p></div>
+                <div class="col-1"><img src="youtube.png" alt=""></div>
+                <div class="col-1"><img src="twitter.png" alt=""></div>
+                <div class="col-1"><img src="fb.png" alt=""></div>
+            </div>
         </div>
     </footer> 
 </body>
