--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
             <h2>
                 MISE EN SITUATION
             </h2>
+            <img src="bannière.png" alt="">
             <p>
-                La délicieuse barre protéinée aux saveurs urprenantes à chaque bouchée !
+                La délicieuse barre protéinée aux saveurs surprenantes à chaque bouchée !
             </p>
         </div>
     </section>
@@ -64,6 +65,7 @@
             <h2>
                 CONTACT
             </h2>
+            <img src="bannière.png" alt="">
             <form method="post" action="#" >
                     <div class="row">
                         <div class="col-4">
@@ -88,7 +90,7 @@
     <footer class="container-fluid">
         <div class="container"> 
             <div class="row">
-                <div class="col-4"><p>Pour votre santé évitez de manger trop gras, trop sucré</p></div>
+                <div class="col-4"><p class="color">Pour votre santé évitez de manger trop gras, trop sucré</p></div>
                 <div class="col-1"><img src="youtube.png" alt=""></div>
                 <div class="col-1"><img src="twitter.png" alt=""></div>
                 <div class="col-1"><img src="fb.png" alt=""></div>
